appId: de.jft.immosnapp
name: Erase Text
tags:
  - 'util'

---
- longPressOn:
    id: ${id}
- runFlow:
    when:
      visible:
        text: 'Select All'
    commands:
      - tapOn: Select All
      - eraseText: 1
