appId: de.jft.immosnapp
name: Navigate to room action
tags:
  - 'util'

---
- runFlow:
    when:
      notVisible:
        id: 'room-view'
    commands:
      - runFlow:
          file: './navigate-to-room.yaml'
          env:
            ROOM: ${ROOM}

- extendedWaitUntil:
    visible:
      id: 'room-view'
    timeout: 60000
- assertVisible:
    id: 'room-header'
    index: 0
- tapOn:
    id: 'room-header'
    index: 0
- extendedWaitUntil:
    visible:
      id: 'room-actions-view'
    timeout: 60000
