appId: de.jft.immosnapp
name: Navigate to room
tags:
  - 'util'

---
- scrollUntilVisible:
    element:
      id: 'rooms-list-view-item-${ROOM}'
- tapOn:
    id: 'rooms-list-view-item-${ROOM}'
- extendedWaitUntil:
    visible:
      id: 'room-view-title-${ROOM}'
    timeout: 60000
