appId: de.jft.immosnapp
name: Profile
onFlowStart:
  - runFlow: '../../helpers/setup.yaml'
onFlowComplete:
  - evalScript: ${output.utils.deleteCreatedUsers()}

---
- evalScript: ${output.user = output.utils.createUser()}

- runFlow: ../../helpers/launch-app.yaml
- runFlow:
    file: '../../helpers/login.yaml'
    env:
      USERNAME: ${output.user.username}
      PASSWORD: ${output.user.password}
- extendedWaitUntil:
    visible:
      id: 'rooms-list-view-sidebar'
    timeout: 60000
- tapOn:
    id: 'rooms-list-view-sidebar'
- extendedWaitUntil:
    visible:
      id: 'sidebar-view'
    timeout: 60000
- extendedWaitUntil:
    visible:
      id: 'sidebar-profile'
    timeout: 60000
- tapOn:
    id: 'sidebar-profile'
- extendedWaitUntil:
    visible:
      id: 'profile-view'
    timeout: 60000

# should have profile view
- assertVisible:
    id: 'profile-view'

# should have avatar
- assertVisible:
    id: 'profile-view-avatar'

# should have avatar edit button
- assertVisible:
    id: 'avatar-edit-button'

# should have name
- assertVisible:
    id: 'profile-view-name'

# should have username
- assertVisible:
    id: 'profile-view-username'

# should have email
- assertVisible:
    id: 'profile-view-email'

# should have new password
- assertVisible:
    id: 'profile-view-change-my-password-button'

# should have submit button
- scrollUntilVisible:
    element:
      id: 'profile-view-submit'
    timeout: 60000

# submit button should be disabled because of no changes
- assertVisible:
    id: 'profile-view-submit'
    enabled: false

# swipe back to top
- swipe:
    from:
      id: 'profile-view-submit'
    direction: UP

# should change name and username
- assertVisible:
    id: 'profile-view-name'
- runFlow:
    file: '../../helpers/erase-text.yaml'
    env:
      id: 'profile-view-name'
- inputText: ${output.user.name + 'newname'}
- assertVisible:
    id: 'profile-view-username'
- runFlow:
    file: '../../helpers/erase-text.yaml'
    env:
      id: 'profile-view-username'
- inputText: ${output.user.username + 'username'}
- tapOn: '.*Username.*' #hidekeyboard on iOS
- scrollUntilVisible:
    element:
      id: 'profile-view-submit'
    timeout: 60000
- tapOn:
    id: 'profile-view-submit'

# should change nickname and bio
- assertVisible:
    id: 'profile-view-nickname'
- tapOn:
    id: 'profile-view-nickname'
- inputText: ${output.user.username + 'newnickname'}
- tapOn:
    text: '.*Nickname.*'
    index: 0
- assertVisible:
    id: 'profile-view-bio'
- tapOn:
    id: 'profile-view-bio'
- inputText: ${output.user.username + 'newbio'}
- tapOn:
    text: '.*Bio.*'
    index: 0
- scrollUntilVisible:
    element:
      id: 'profile-view-submit'
    timeout: 60000
- tapOn:
    id: 'profile-view-submit'

# should change email
- scrollUntilVisible:
    element:
      id: 'profile-view-email'
    timeout: 60000
- runFlow:
    when:
      platform: ios
    commands:
      - longPressOn:
          id: 'profile-view-email'
- runFlow:
    file: '../../helpers/erase-text.yaml'
    env:
      id: 'profile-view-email'
- inputText: mobile+profileChangesNew${output.random()}@rocket.chat
- tapOn:
    text: '.*Email.*'
    index: 0
- scrollUntilVisible:
    element:
      id: 'profile-view-submit'
    timeout: 60000
- tapOn:
    id: 'profile-view-submit'
- extendedWaitUntil:
    visible:
      id: 'profile-view-enter-password-sheet-input'
    timeout: 60000
- tapOn:
    id: 'profile-view-enter-password-sheet-input'
- inputText: ${output.user.password}
- tapOn:
    text: 'Save'
- extendedWaitUntil:
    notVisible:
      id: 'profile-view-enter-password-sheet-input'
    timeout: 60000

# should change password
- scrollUntilVisible:
    element:
      id: 'profile-view-change-my-password-button'
    timeout: 60000
- tapOn:
    id: 'profile-view-change-my-password-button'
- extendedWaitUntil:
    visible:
      id: 'change-password-view-current-password'
    timeout: 60000
- tapOn:
    id: 'change-password-view-current-password'
- inputText: ${output.user.password}
- assertVisible:
    id: 'change-password-view-new-password'
- tapOn:
    id: 'change-password-view-new-password'
- inputText: ${output.user.password + 'new'}
- assertVisible:
    id: 'change-password-view-confirm-new-password'
- tapOn:
    id: 'change-password-view-confirm-new-password'
- inputText: ${output.user.password + 'new'}
- scrollUntilVisible:
    element:
      id: 'change-password-view-set-new-password-button'
    timeout: 60000
- tapOn:
    id: 'change-password-view-set-new-password-button'
- runFlow:
    when:
      visible:
        text: 'Ok'
    commands:
      - tapOn: 'Ok'
      - tapOn: 'Cancel'
- extendedWaitUntil:
    visible:
      id: 'profile-view'
    timeout: 60000
