appId: de.jft.immosnapp
name: Required Password Change
onFlowStart:
  - runFlow: '../../helpers/setup.yaml'
  - evalScript: ${output.createdUser = output.utils.createUserWithPasswordChange()}
onFlowEnd:
  - evalScript: ${output.utils.deleteCreatedUsers()}

---
- runFlow: ../../helpers/launch-app.yaml
- runFlow:
    file: ../../helpers/login.yaml
    env:
      USERNAME: ${output.createdUser.username}
      PASSWORD: ${output.createdUser.password}
- extendedWaitUntil:
    visible: You need to change your password
    timeout: 60000
- assertVisible:
    id: change-password-required-button
- tapOn:
    id: change-password-required-button
- assertVisible:
    id: change-password-view-new-password
- tapOn:
    id: change-password-view-new-password
- inputText: 123456
- hideKeyboard
- assertVisible:
    id: change-password-view-confirm-new-password
- tapOn:
    id: change-password-view-confirm-new-password
- inputText: 123456
- hideKeyboard
- assertVisible:
    id: change-password-view-set-new-password-button
- tapOn:
    id: change-password-view-set-new-password-button
- assertVisible:
    id: rooms-list-view
- runFlow: ../../helpers/logout.yaml
- runFlow:
    file: ../../helpers/login.yaml
    env:
      USERNAME: ${output.createdUser.username}
      PASSWORD: 123456
- assertVisible:
    id: 'rooms-list-view-item-general'
